maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:70: error: not enough arguments for method leftFollowerMode: (sommeAngle: Int)Int.
Unspecified value parameter sommeAngle.
  leftFollowerMode();
                  ^