maze.pledge.PledgeMaze.scala.code
// this method works
def isWallAtLeft () : Boolean = {
  left();
  var answer = isFacingWall();
  right();
  return answer;
}

// this one is unnecessary
def isDirectionFree (direction : Direction) : Boolean = {
  var pos = getDirection();
  setDirection(direction);
 	var answer = !isFacingWall();
  setDirection(pos); // bring back to the initial position
  return answer;
}

// convoluted with staying the wall at the left :
def leftFollowerMode(sommeAngle : Int) : Int = {
  var x = sommeAngle;
  while ((getDirection() != Direction.NORTH) || isFacingWall()) {
     if (!isFacingWall()) {
     	forward();
      if (!isWallAtLeft()) {
    	 	left();
        x += 1;
        forward();
        if (!isWallAtLeft()) {
      	  left();
          x += 1;
          forward();
        }
      }
     } else { right(); x -= 1;} 
  } ; return x;
}

// this method works
def northRunnerMode () {
  while (getDirection() != Direction.NORTH) { // auto-orientation
    right();
  }
  while (!isFacingWall()) { // forward as long is possible
  		forward();
  }
}

def makeMoving() {
  var state = 0;
  var sommeAngle = 0;
  var cpt = 1; // to enter in the first boucle
  while (!isOverBaggle()) {
    state match {
      case 0 => if ((sommeAngle%4 != 0) || cpt ==1) { // not 360 degres turn accomplished
        						northRunnerMode(); // while we don't find a wall on the north
      							cpt += 1;
      					}; state = 1;
      case 1 =>  while (!isWallAtLeft()) { 
        						right(); // make sure that there is a wall on the left
      					 }; sommeAngle = leftFollowerMode(sommeAngle); state = 0;
      case _ => println("Error : this case should not happen.")
    }
  }
  pickupBaggle();
}

override def run() { 
  forward();
  leftFollowerMode();
}